<?xml version="1.0"?>
<package format="2">
  <name>realsense_gazebo_plugin</name>
  <version>0.1.0</version>
  <description>Intel RealSense D435 Gazebo plugin package</description>
  <author>Huang Shaojie</author>
  <author email="shaojie@neocobot.com">Huang Shaojie</author>
  <maintainer email="shaojie@neocobot.com">Huang Shaojie</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>

  <export>
    <gazebo_ros
      plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models"
      />
  </export>
</package>
